<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".Contact.ContactSettingsActivity">


    <TextView
        android:id="@+id/name_textView"
        style="@style/ContactSettings"
        android:textSize="30sp"
        android:text="@string/contact_settings_name_text_title"/>

    <TextView
        android:id="@+id/email_textView"
        style="@style/ContactSettings"
        android:textSize="20sp"
        android:text="@string/contact_settings_email_text_title" />

    <CheckBox
        android:id="@+id/display_notifications"
        style="@style/ContactSettings"
        android:checked="true"
        android:text="@string/contact_settings_notifications_checkbox" />

    <Button
        android:id="@+id/edit_contact"
        style="@style/ContactSettings"
        android:text="@string/contact_settings_edit_contact_button" />
    <Button
        android:id="@+id/show_attachments"
        style="@style/ContactSettings"
        android:text="@string/contact_settings_show_attachments_button" />


    <Button
        android:id="@+id/start_conversation"
        style="@style/ContactSettings"
        android:text="@string/contact_settings_start_button" />

    <Button
        android:id="@+id/delete_converstation"
        style="@style/ContactSettings"
        android:text="@string/contact_settings_delete_button" />

</LinearLayout>